<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_finish"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">


    <ImageView
        android:id="@+id/ivBestScore"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/ic_best_score" />

    <TextView
        android:id="@+id/tvNewBestScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/new_best_score"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/your_score"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvYourScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="150"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="100dp">

        <TextView
            android:id="@+id/tvStarCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="13x"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivStar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/star" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:paddingLeft="100dp">

        <TextView
            android:id="@+id/tvCoinsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="3x"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivCoins"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_coins" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_dialog_buttons"
            android:padding="5dp"
            android:text="@string/back_to_main_menu"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_dialog_buttons"
            android:padding="5dp"
            android:text="@string/restart"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>