<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvScoreCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/tvScore"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/ivBestScore"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:src="@drawable/ic_best_score"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progressTime"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivBestScore"
        android:max="600"
        android:paddingTop="10dp"
        android:progress="0" />

    <TextView
        android:id="@+id/tvMidle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="TextView" />

    <Button
        android:id="@+id/btnAnswerWrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tvMidle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tvMidle"
        android:background="@color/colorWrong"
        android:text="@string/wrong"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/btnAnswerRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/btnAnswerWrong"
        android:background="@color/colorRight"
        android:text="@string/right"
        android:textColor="@color/colorWhite" />


    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMidle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tvDescription"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:textAlignment="center"
        android:text="TextView"
        android:textSize="20sp" />
</RelativeLayout>